--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </form> 
         </div>
         <div class=".task-section">
-            <ul class="">
+            <ul class="ul-box">
             </ul>
         </div>
         <button class="Clear-all">clear all</button>
