Опять исправила ошибку

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </span>
             </form> 
         </div>
-        <div class=".task-section">
+        <div class="task-section">
             <ul class="ul-box">
             </ul>
         </div>
